--- a/.github/workflows/t-op.yml
+++ b/.github/workflows/t-op.yml
@@ -43,6 +43,7 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with trbot
+      timeout-minutes: 350
       run: |
         cd TRANSLATOR-OP
         python -m trbot
